  the source line (debugger commands "eval" and "eval?")
- ability to go into a nested shell but keeping existing variables and
  functions set. (debugger command "shell") With this, one needs...
- ability to save variables to an outer shell ("set_vars" function
  inside the interactive shell)
- ability to save values from inside a subshell to the outer shell
  (debugger command "export")

Version 4.2-0.6 - giant madagascar day gecko
2010-12-10

- Debugger "list" command carries on where we last left off and 
  centers around a line unless given a start and end line number. l> added.
- Fixed --no-init (--nx, -n) option
- Fixed to work on bash version 4.2
- Reorganized command-processing code to simplify it, make it more dynamic,
  and allow for better expansion increasing DRYness. As a result
  some short abbreviations of commands have been dropped. Use "alias" 
  to add back any that you want.
- Make "display" command more like gdb. Note this is an incompatible change.
  Left to do is to start indexing from 1.
- Emacs lisp code has been removed. Please multi-debugger code from
  http://github.com/rocky/emacs-dbgr instead.
- Numerous little bugs fixed. 

Version 4.1-0.5
2010-10-27

- Add set/show autolist.
- Fix bugs when file contained spaces in a directory portion of the path
- "Set force" deprecated. Use "set different".
- Code reorganization to support subcommands (set/show/info) and allow
  for growth

Version 4.1-0.4
2010-07-09

- Rewrite to use bash associative arrays (first in 4.0) and automatic 
  file descriptor selection for input (first in 4.1). As a result, we
  need bash 4.1 or greater.

- "info program" shows the command to be executed. 

- tests run clean on Solaris 

- many help corrections and improvements

- .bashdbinit is now $HOME/.bashdbrc

- code is cleaner, more reliable and more maintainable (at least by
  me). Some small bugs fixed.

Version 4.0-0.4
2009-10-27

- Handle file names with embedded blanks. More parameters in calls are now