@@ -33,6 +33,9 @@ options:
     --highlight | --no-highlight 
                             Use or don't use ANSI terminal sequences for syntax
                             highlight
+    --init-file FILE        Source bash FILE. Similar to bash's corresponding
+                            option. This option can be given several times
+                            with different files.
     -L | --library DIRECTORY
                             Set the directory location of library helper file: $_Dbg_main
     -c | --command STRING   Run STRING instead of a script file
@@ -72,7 +75,7 @@ typeset -i _Dbg_linetrace=0
 typeset -i _Dbg_set_basename=0
 typeset -i _Dbg_set_highlight=0
 typeset -i _Dbg_o_nx=0
-
+typeset -a _Dbg_o_init_files; _Dbg_o_init_files=()
 
 _Dbg_parse_options() {
 
@@ -89,6 +92,7 @@ _Dbg_parse_options() {
 	eval-command required_argument       \
     	help     0                           \
     	highlight    no_argument             \
+	init-file    required_argument       \
 	library      required_argument       \
 	no-highlight no_argument             \
 	no-init  0                           \
@@ -116,6 +120,11 @@ _Dbg_parse_options() {
 		_Dbg_set_highlight=1  	;;
 	    no-highlight )
 		_Dbg_set_highlight=0  	;;
+	    init-file )
+		set -x
+		_Dbg_o_init_files+="$OPTLARG"	
+		set +x
+		;;
 	    L | library ) 		;;
 	    V | version )
 		_Dbg_o_version=1	;;
